Bug 1009734 - Wait until draw to warn about texture completeness. - r=kamidphish